Fixed the Out of bound bug

--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
-body {
+/* body {
 	background-color: rgb(0, 0, 0);
-}
-
+} */
+/* 
 .container {
 	position: relative;
 	width: 100%;
@@ -12,6 +12,7 @@ body {
 }
 
 .logo {
+	pointer-events: none;
 	overflow: hidden;
 	gap: 8px;
 	padding-top: 20px;
@@ -24,9 +25,11 @@ body {
 .gd,
 .game {
 	flex: 1;
+	pointer-events: none;
 }
 
 .gd {
+	pointer-events: none;
 	border-radius: 120px;
 	padding-left: 100px;
 	background: #000000;
@@ -55,20 +58,101 @@ body {
 }
 
 @keyframes slideLeft {
-	0% {
+	from {
 		transform: translateX(-20%);
 	}
-	100% {
+	to {
+		transform: translateX(-65%);
+	}
+	animation-fill-mode: forwards;
+}
+
+@keyframes slideRight {
+	from {
+		transform: translateX(-300%);
+	}
+	to {
+		transform: translateX(-60%);
+		opacity: 1;
+	}
+	animation-fill-mode: forwards;
+} */
+
+/* Trying something out */
+
+body {
+	background-color: rgb(0, 0, 0);
+}
+
+.container {
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.logo {
+	pointer-events: none;
+	overflow: hidden;
+	gap: 8px;
+	padding-top: 20px;
+	width: 220px;
+	height: 40px;
+	display: flex;
+	position: relative;
+}
+
+.gd,
+.game {
+	flex: 1;
+	pointer-events: none;
+}
+
+.gd {
+	pointer-events: none;
+	border-radius: 120px;
+	padding-left: 100px;
+	background: #000000;
+	max-width: 40px;
+	height: 25px;
+	margin-top: -1px;
+	animation: slideLeft 0.5s forwards;
+	z-index: -1;
+}
+
+.game {
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	z-index: -2;
+	opacity: 0;
+	animation-delay: 3s;
+	animation: slideRight 1s forwards;
+	mask-image: linear-gradient(
+		to right,
+		transparent,
+		black 20%,
+		rgb(255, 0, 0) 80%,
+		transparent
+	);
+}
+
+@keyframes slideLeft {
+	from {
+		transform: translateX(-20%);
+	}
+	to {
 		transform: translateX(-65%);
 	}
 }
 
 @keyframes slideRight {
-	0% {
-		transform: translateX(-600%);
-		/* opacity: 1; */
+	from {
+		transform: translateX(-300%);
 	}
-	100% {
+	to {
 		transform: translateX(-60%);
 		opacity: 1;
 	}
